# worship-screens

./: CHANGELOG.md  Cargo.toml  build.rs  dist-workspace.toml  flake.nix  release.toml  rust-toolchain.toml
crates/ui/: Cargo.toml
src/: bibles_manager.rs  bitstream_converter.rs  check_update.rs  fav_text_manager.rs  main.rs  manager.rs  media_manager.rs  schedule_manager.rs  settings.rs  song_manager.rs  user_data.rs  utils.rs
src/manager/: bibles.rs  media.rs  schedule.rs  song.rs
src/manager/media/: egl.rs  init.rs
ui/: main.slint  settings.slint  view.slint
ui/api/: global.slint  schedule.slint  songs.slint  view-state.slint
ui/components/: color-picker-button.slint  color-picker.slint  font-edit.slint  markdown.slint  media-selector.slint  view.slint
ui/components/base/: renderable.slint
ui/components/input/: badge.slint  check.slint  slider-label.slint
ui/dialogs/: base.slint  bibles.slint  changelog.slint  media-selector.slint  songs.slint
ui/icons/: download.apng
ui/tabs/: media.slint  preview.slint  songs.slint  texts.slint  verses.slint
wix/: main.wxs
