[package]
name = "worship-screens"
version = "0.1.1-alpha.1"
description = "Present image/video/animations with text/verse on external monitor"
authors = ["Sergio Ribera <contact@sergioribera.rs>"]
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/biblionlabs/worship-screens"

[package.metadata.wix]
upgrade-guid = "F44F98E1-EE6A-4911-BDCB-0657C16E521C"
path-guid = "B52C0688-96BA-4A81-AE74-49EA37366963"
license = false
eula = false

[workspace]
members = ["crates/ui"]

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
strip = true
lto = "thin"
panic = 'abort'
opt-level = 3
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
i-slint-core = "1.13.1"
slint = { version = "1.13.1", default-features = false, features = [
    "serde",
    "compat-1-2",
    "backend-winit",
    "renderer-winit-skia",
    "unstable-winit-030",
] }

[dependencies]
image = "0.25"
mp4 = "0.14.0"
notify = "8.2.0"
openh264 = "0.9.0"
rfd = "0.15"
serde.workspace = true
serde_json = "1"
# setup_core = { git = "https://github.com/biblionlabs/biblion-service", version = "0.1.0" }
setup_core = { path = "../service/crates/setup/", version = "0.1.0" }
i-slint-core.workspace = true
slint.workspace = true
tokio = { version = "1.48", default-features = false, features = [
    "time",
    "macros",
    "rt-multi-thread",
] }
ui = { path = "./crates/ui" }
