[package]
name = "worship-screens"
version = "0.1.1-alpha.6"
description = "Present image/video/animations with text/verse on external monitor"
authors = ["Sergio Ribera <contact@sergioribera.rs>"]
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/biblionlabs/worship-screens"

[package.metadata.wix]
upgrade-guid = "F44F98E1-EE6A-4911-BDCB-0657C16E521C"
path-guid = "B52C0688-96BA-4A81-AE74-49EA37366963"
license = false
eula = false

[workspace]
members = ["crates/ui"]

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
strip = true
lto = "thin"
panic = 'abort'
opt-level = 3
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
i-slint-core = "1.13.1"
slint = { version = "1.13.1", default-features = false, features = [
    "serde",
    "compat-1-2",
    "backend-winit",
    "renderer-winit-skia",
    "unstable-winit-030",
] }

[dependencies]
image = "0.25"
mp4 = "0.14"
notify = "8.2"
openh264 = "0.9"
rfd = "0.15"
serde.workspace = true
serde_json = "1"
setup_core = { git = "https://github.com/biblionlabs/biblion-service", version = "0.1.0" }
# setup_core = { path = "../service/crates/setup/", version = "0.1.0" }
i-slint-core.workspace = true
slint.workspace = true
tokio = { version = "1.48", default-features = false, features = [
    "time",
    "macros",
    "rt-multi-thread",
] }
ui = { path = "./crates/ui" }
notify-rust = { version = "4.11", default-features = false, features = ["z"] }
semver = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "system-proxy",
    "http2",
] }
open = "5.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
tracing-appender = "0.2"
fontdb = "0.23"
